# vocals

./: .gitignore  main.py  pyproject.toml
tabs/: all_i_ask.txt  dont_stop_believin.txt  eso_y_mas.txt  hqmo.txt  la_llamarada.txt  mixed_voice.txt  ysvatm.txt
